; ModuleID = '/home/carl/AnghaBench/php-src/ext/phar/extr_func_interceptors.c_phar_restore_orig_functions.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/phar/extr_func_interceptors.c_phar_restore_orig_functions.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32 }

@phar_orig_functions = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @phar_restore_orig_functions() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 21), align 4
  store i32 %23, i32* %1, align 4
  %24 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 20), align 4
  store i32 %24, i32* %2, align 4
  %25 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 19), align 4
  store i32 %25, i32* %3, align 4
  %26 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 18), align 4
  store i32 %26, i32* %4, align 4
  %27 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 17), align 4
  store i32 %27, i32* %5, align 4
  %28 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 16), align 4
  store i32 %28, i32* %6, align 4
  %29 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 15), align 4
  store i32 %29, i32* %7, align 4
  %30 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 14), align 4
  store i32 %30, i32* %8, align 4
  %31 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 13), align 4
  store i32 %31, i32* %9, align 4
  %32 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 12), align 4
  store i32 %32, i32* %10, align 4
  %33 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 11), align 4
  store i32 %33, i32* %11, align 4
  %34 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 10), align 4
  store i32 %34, i32* %12, align 4
  %35 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 9), align 4
  store i32 %35, i32* %13, align 4
  %36 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 8), align 4
  store i32 %36, i32* %14, align 4
  %37 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 7), align 4
  store i32 %37, i32* %15, align 4
  %38 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 6), align 4
  store i32 %38, i32* %16, align 4
  %39 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 5), align 4
  store i32 %39, i32* %17, align 4
  %40 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 4), align 4
  store i32 %40, i32* %18, align 4
  %41 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 3), align 4
  store i32 %41, i32* %19, align 4
  %42 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 2), align 4
  store i32 %42, i32* %20, align 4
  %43 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 1), align 4
  store i32 %43, i32* %21, align 4
  %44 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @phar_orig_functions, i32 0, i32 0), align 4
  store i32 %44, i32* %22, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
